--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,8 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-body{
+  }
+  body{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,103 +11,127 @@ body{
     line-height: 32px;
     font-size: 16px;
     color: #808008;
-}
-h1{
+  }
+  h1{
     font-size: 3rem;
     color: #000000;
-}
-h2{
+  }
+  h2{
     font-size: 2rem;
-    text-align: center;
+    text-align: left;
     border-bottom:1px solid #1b1a1a;
-}
-header, main, footer{
+  }
+  main, footer{
     margin: 1.25rem auto;
     padding: .5rem;
     max-width: 960px;
-}
-header{
+  }
+  header{
     display: flex;
     width: 100%;
     padding: 2rem 3rem;
     align-items: center;
     border-radius: 1rem;
     background-color: red;
-} 
-footer a, footer{
+  } 
+  footer a, footer{
     text-align: center;
     background-color: auto;
     color: #f0fff0;
-}
-.profile-pic{
+  }
+  .profile-pic{
     display: flex;
     align-items: center;
-}
-.profile-pic img {
-	width: 11rem;
-	height: 11rem;
-	border-radius: 50%;
-	border: blue solid 4px;
-}
-ul li {
+    float: right;
+    margin-right: 2rem;
+  }
+  .profile-pic img {
+      width: 11rem;
+      height: 11rem;
+      border-radius: 1rem;
+      border: 4px solid blue;
+  }
+  main li {
+    margin-left: 5rem;
+  }
+  footer li {
     list-style: none;
-}
-
-/* @ PHONE SCREEN */
-
-@media (min-width: 820px) {
-	.hero-container {
-		padding: 5rem;
-	}
-
-	.hero-container {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		gap: 2rem;
-	}
-
-	.hero-container img {
-		max-width: 100%;
-		display: block;
-	}
-
-	.hero-image {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
-
-	main {
-		grid-template-columns: 1fr 1fr;
-		padding: 0 5rem 5rem 5rem;
-	}
-}
-
-/* @ WEB SCREEN */
-
-@media (min-width: 1200px) {
-	.hero-container {
-		padding: 7rem;
-	}
-
-	.hero-container {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		gap: 2rem;
-		align-items: center;
-	}
-
-	h1 {
-		font-size: 3rem;
-	}
-
-	.hero-container img {
-		max-width: 100%;
-		display: block;
-	}
-
-	main {
-		grid-template-columns: 1fr 1fr 1fr;
-		padding: 0 7rem 7rem 7rem;
-	}
-}
+  }
+  footer {
+      width: 100%;
+      font-size: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border-radius: 1rem;
+      margin-top: 1rem;
+    background-color: red;
+  }
+  
+  footer ul {
+      display: flex;
+      justify-content: center;
+  }
+  .copy {
+      font-weight: 800px;
+  }
+  
+  
+  /* @ PHONE SCREEN 
+  
+  @media (min-width: 820px) {
+      .hero-container {
+          padding: 5rem;
+      }
+  
+      .hero-container {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          gap: 2rem;
+      }
+  
+      .hero-container img {
+          max-width: 100%;
+          display: block;
+      }
+  
+      .hero-image {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+      }
+  
+      main {
+          grid-template-columns: 1fr 1fr;
+          padding: 0 5rem 5rem 5rem;
+      }
+  }
+  
+  /* @ WEB SCREEN 
+  
+  @media (min-width: 1200px) {
+      .hero-container {
+          padding: 7rem;
+      }
+  
+      .hero-container {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          gap: 2rem;
+          align-items: center;
+      }
+  
+      h1 {
+          font-size: 3rem;
+      }
+  
+      .hero-container img {
+          max-width: 100%;
+          display: block;
+      }
+  
+      main {
+          grid-template-columns: 1fr 1fr 1fr;
+          padding: 0 7rem 7rem 7rem;
+      }
+  }*/
