--- a/CSS/style.css
+++ b/CSS/style.css
@@ -90,32 +90,22 @@ footer ul, div{
 .last-update{
   color: #78FECF;
 }
-/* @ PHONE SCREEN 
+/* @ PHONE SCREEN */
 
 @media (min-width: 820px) {
 	container {
 		padding: 5rem;
-	}
-
-	container {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		gap: 2rem;
 	}
 
-	ontainer img {
+	container img {
 		max-width: 100%;
 		display: block;
 	}
-
-	.hero-image {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
-
 	main {
 		grid-template-columns: 1fr 1fr;
 		padding: 0 5rem 5rem 5rem;
 	}
-}*/
+}
