--- a/CSS/style.css
+++ b/CSS/style.css
@@ -90,7 +90,7 @@ footer ul, div{
 .last-update{
   	color: #78FECF;
 }
-/* @ PHONE SCREEN */
+/* @ PHONE SCREEN 
 
 @media (min-width: 820px) {
 	content {
@@ -107,5 +107,5 @@ footer ul, div{
 	main {
 		grid-template-columns: 1fr 1fr;
 		padding: 0 5rem 5rem 5rem;
-	}
+	}*/
 }
