--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,13 +7,13 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+  font-family: 'Overluck', cursive, sans-serif;
   line-height: 32px;
   font-size: 16px;
   width: 100%;
 }
 #content{
-  max-width: 57.25rem;
+  max-width: 50.25rem;
 	padding: 5rem 2rem;
 	max-width: 100%;
 	margin: 8rem auto;
@@ -29,16 +29,10 @@ h2{
   text-align: left;
   border-bottom:1px solid #1b1a1a;
   margin-right: 5.5em;
-  padding-top: 3rem;
+  padding-top: 10px;
   font-size: 3rem;
   text-align: center;
-  color: white;
-}
-h2{
-  font-size: 2rem;
-  text-align: left;
-  border-bottom:1px solid #1b1a1a;
-  margin-right: 5.5em;
+  color: black;
 }
 main, footer{
   padding: .5rem;
@@ -70,8 +64,8 @@ footer a, footer{
   margin-right: -2rem;
 }
 .profile-pic img {
-  width: 11.5rem;
-	height: 17rem;
+  width: 13rem;
+	height: 20rem;
 	border-radius: 1rem;
 	border: 4px solid blue;
   margin-top: 60px;
