--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,40 +3,26 @@
   margin: 0;
   box-sizing: border-box;
 }
-body{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Overluck', cursive, sans-serif;
-  line-height: 32px;
-  width: 100%;
-}
-#content{
-  max-width: 50.25rem;
-	padding: 5rem 2rem;
-	max-width: 100%;
-	margin: 8rem auto;
+header, body, footer{
+  max-width: 57rem;
+  margin: 0 auto;
 }
 h1{
   font-family: 'Nosifer', cursive, sans-serif;
   font-size: 3rem;
   text-align: center;
+  justify-content: center;
   color: white;
 }
 h2{
   font-size: 2rem;
-  text-align: left;
   border-bottom:1px solid #1b1a1a;
   margin-right: 4em;
   padding-top: 10px;
   color: black;
 }
 header{
-  display: flex;
-  width: 10rem auto;
-  height: 8rem;
-  padding: 2rem 3rem;
-  align-items: center;
+  padding: 5px;
   border-radius: 1rem;
   background-color: #fa8334;
 } 
@@ -54,7 +40,6 @@ footer a, footer{
   margin-top: 12rem;
   display: flex;
   float: right;
-  padding-left: 5rem;
   margin-right: 2rem;
 }
 .profile-pic img {
@@ -62,7 +47,7 @@ footer a, footer{
 	height: 20rem;
 	border-radius: 1rem;
 	border: 4px solid blue;
-  margin-top: 60px;
+  margin-top: 6px;
   box-shadow:5px 0 5px 5px #033483;
 }
 main li {
@@ -75,17 +60,9 @@ footer {
 	width: 10rem auto;
   height: 6rem;
 	font-size: 1rem;
-	display: flex;
 	flex-direction: column;
-	align-items: left;
 	border-radius: 1rem;
   background-color: #fa8334;
-}
-footer ul, div{
-  margin-right: 11em;
-}
-.copy{
-	font-size: 1.1rem;
 }
 .last-update{
   color: #78FECF;
