--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,7 +37,6 @@ footer a, footer{
   color: #f0fff0;
 }
 .profile-pic{
-  margin-top: 12rem;
   display: flex;
   float: right;
   margin-right: 2rem;
@@ -60,7 +59,6 @@ footer {
 	width: 10rem auto;
   height: 6rem;
 	font-size: 1rem;
-	flex-direction: column;
 	border-radius: 1rem;
   background-color: #fa8334;
 }
@@ -68,7 +66,7 @@ footer {
   color: #78FECF;
 }
 .links, .last-update{
-  display: inline;
+  display: block;
 }
 /* @ PHONE SCREEN 
 
