--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,10 +9,11 @@ header, body, footer{
 }
 h1{
   font-family: 'Nosifer', cursive, sans-serif;
-  font-size: 3rem;
+  font-size: 2rem;
   text-align: center;
   justify-content: center;
   color: white;
+  padding-right: 8rem;
 }
 h2{
   font-size: 2rem;
@@ -49,7 +50,7 @@ footer a, footer{
   margin-top: 6px;
   box-shadow:5px 0 5px 5px #033483;
 }
-main li {
+.links {
   margin-left: 4rem;
 }
 footer li {
