--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,6 @@
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+
 header, body, footer{
-  max-width: 57rem;
+  max-width: 760px;
   margin: 0 auto;
 }
 h1{
@@ -13,7 +9,6 @@ h1{
   text-align: center;
   justify-content: center;
   color: white;
-  padding-right: 8rem;
 }
 h2{
   font-size: 2rem;
@@ -38,7 +33,6 @@ footer a, footer{
   color: #f0fff0;
 }
 .profile-pic{
-  display: flex;
   float: right;
   margin-right: 2rem;
 }
@@ -47,7 +41,6 @@ footer a, footer{
 	height: 20rem;
 	border-radius: 1rem;
 	border: 4px solid blue;
-  margin-top: 6px;
   box-shadow:5px 0 5px 5px #033483;
 }
 .links {
