--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 
 header, body, footer{
   max-width: 760px;
-  margin: 0 auto;
+  margin: 11rem auto;
 }
 h1{
   font-family: 'Nosifer', cursive, sans-serif;
@@ -14,11 +14,12 @@ h2{
   font-size: 2rem;
   border-bottom:1px solid #1b1a1a;
   margin-right: 4em;
-  padding-top: 10px;
+  padding-top: 5px;
   color: black;
 }
 header{
   padding: 5px;
+  padding-right: 12rem;
   border-radius: 1rem;
   background-color: #fa8334;
 } 
@@ -50,7 +51,6 @@ footer li {
   list-style: none;
 }
 footer {
-	width: 10rem auto;
   height: 6rem;
 	font-size: 1rem;
 	border-radius: 1rem;
@@ -58,9 +58,6 @@ footer {
 }
 .last-update{
   color: #78FECF;
-}
-.links, .last-update{
-  display: block;
 }
 /* @ PHONE SCREEN 
 
