--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 
 header, body, footer{
 	max-width: 760px;
-	margin: 11rem auto;
+	margin: 1rem auto;
 }
 h1{
 	font-family: 'Nosifer', cursive, sans-serif;
@@ -18,8 +18,8 @@ h2{
 	color: black;
 }
 header{
-	padding: 5px;
-	padding-right: 12rem;
+	padding: 8px;
+	padding-right: 18rem;
 	border-radius: 1rem;
 	background-color: #fa8334;
 } 
@@ -28,14 +28,9 @@ a:visited,
 a:active {
 	color: #758bfd;
 }
-footer a, footer{
- 	text-align: center;
-	background-color: auto;
-	color: #f0fff0;
-}
 .profile-pic{
 	float: right;
-	margin-right: 2rem;
+	margin-right: ;
 }
 .profile-pic img {
 	width: 13rem;
@@ -46,13 +41,16 @@ footer a, footer{
 }
 .links {
  	margin-left: 4rem;
+	display: flex;
 }
 footer li {
  	list-style: none;
 }
 footer {
+	text-align: center;
+	color: #f0fff0;
 	height: 6rem;
-	font-size: 1rem;
+	font-size: 1.5rem;
 	border-radius: 1rem;
 	background-color: #fa8334;
 }
