--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,9 +39,11 @@ a:active {
 	border: 4px solid blue;
 	box-shadow:5px 0 5px 5px #033483;
 }
+main{
+	display: flex;
+}
 .links {
  	margin-left: 4rem;
-	display: flex;
 }
 footer li {
  	list-style: none;
