--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,7 @@ header, body, footer{
 }
 h1{
 	font-family: 'Nosifer', cursive, sans-serif;
-	padding-left: 30px;
+	padding-left: 5px;
 	font-size: 2rem;
 	text-align: center;
  	justify-content: center;
@@ -30,7 +30,8 @@ a:active {
 }
 .profile-pic{
 	float: right;
-	margin-right: 5px;
+	margin-right: 10px;
+	margin-top: 5px;
 }
 .profile-pic img {
 	width: 13rem;
