--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@ header, body, footer{
 	margin: 1rem auto;
 }
 h1{
-	font-family: 'Nosifer', cursive, sans-serif;
+	font-family: ''Segoe UI'', cursive, sans-serif;
 	font-size: 2rem;
 	text-align: center;
  	justify-content: center;
