--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@ header, body, footer{
   margin: 11rem auto;
 }
 h1{
-  font-family: 'Nosifer', cursive, sans-serif;
+  font-family: 'Segoe UI', cursive, sans-serif;
   font-size: 2rem;
   text-align: center;
   justify-content: center;
@@ -35,7 +35,8 @@ footer a, footer{
 }
 .profile-pic{
   float: right;
-  margin-right: 2rem;
+  margin-right: 15px;
+  margin-top: 10px;
 }
 .profile-pic img {
   width: 13rem;
@@ -45,13 +46,12 @@ footer a, footer{
   box-shadow:5px 0 5px 5px #033483;
 }
 .links {
-  margin-left: 4rem;
+  margin-left: 2rem;
 }
 footer li {
   list-style: none;
 }
 footer {
-  height: 6rem;
 	font-size: 1rem;
 	border-radius: 1rem;
   background-color: #fa8334;
