--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,7 +34,7 @@ a:active {
 }
 .profile-pic img {
 	width: 13rem;
-	height: 20rem;
+	height: 15rem;
 	border-radius: 1rem;
 	border: 4px solid blue;
 	box-shadow:5px 0 5px 5px #033483;
@@ -46,6 +46,7 @@ footer li {
  	list-style: none;
 }
 footer {
+  align-items: center;
 	font-size: 1rem;
 	border-radius: 1rem;
 	background-color: #fa8334;
