--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,7 +40,7 @@ a:active {
 	box-shadow:5px 0 5px 5px #033483;
 }
 .links {
- 	margin-left: 1.5rem;
+ 	margin-left: 20px;
 }
 footer li {
  	list-style: none;
