--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,7 +34,7 @@ a:active {
 }
 .profile-pic img {
 	width: 13rem;
-	height: 17rem;
+	height: 16rem;
 	border-radius: 1rem;
 	border: 4px solid blue;
 	box-shadow:5px 0 5px 5px #033483;
@@ -54,7 +54,7 @@ footer {
  	color: #78FECF;
 }
 .copy, .last-update {
-  align-items: center;
+  text-align: center;
   justify-items: center;
 }
 /* @ PHONE SCREEN 
