--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,7 @@ h1{
 	text-align: center;
  	justify-content: center;
 	color: white;
+  text-shadow: -4px 3px rgb(18, 209, 50);
 }
 h2{
 	font-size: 2rem;
@@ -52,6 +53,7 @@ footer {
 }
 .last-update{
  	color: #78FECF;
+  margin-left: 2rem;
 }
 .copy, .last-update {
   text-align: center;
