--- a/design-principles/css/small.css
+++ b/design-principles/css/small.css
@@ -31,7 +31,7 @@ h1 {
 }
 
 main {
-    align-content: center;
+    justify-content: center;
     display: grid;
     grid-template-columns: auto;
     grid-gap: 10px;
