--- a/design-principles/css/small.css
+++ b/design-principles/css/small.css
@@ -31,9 +31,8 @@ h1 {
 }
 
 main {
-    justify-content: center;
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 1fr;
     grid-gap: 10px;
     padding: 1rem;
 }
