--- a/design-principles/css/medium.css
+++ b/design-principles/css/medium.css
@@ -1,5 +1,5 @@
 @media (min-width: 900px){
     main {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     }
 }
