--- a/design-principles/css/large.css
+++ b/design-principles/css/large.css
@@ -1,5 +1,8 @@
-@media (min-width: 900px){
+@media only screen and (min-width: 940px) {
     main {
+        display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+        max-width: 100%;
     }
 }
