--- a/design-principles/css/medium.css
+++ b/design-principles/css/medium.css
@@ -1,5 +1,9 @@
-@media (min-width: 900px){
+@media only screen and (min-width: 37.5em) {
     main {
+        display: grid;
         grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-gap: 10px;
+        max-width: 750px;
     }
 }
