--- a/design-principles/css/small.css
+++ b/design-principles/css/small.css
@@ -31,6 +31,8 @@ h1 {
 }
 
 main {
+    display: grid;
+    margin: 0 auto;
     grid-template-columns: 1fr;
     grid-gap: 10px;
     padding: 1rem;
