--- a/design-principles/css/small.css
+++ b/design-principles/css/small.css
@@ -28,6 +28,13 @@ h1 {
     font-family: 'Carter One', 'cursive', sans-serif;
     font-size: 2.4rem;
     color: #081202;
+    margin-top: 0;
+}
+h2 {
+    font-family: 'Carter One', 'cursive', sans-serif;
+    font-size: 2rem;
+    color: #081202;
+    margin-bottom: 0;
 }
 
 main {
@@ -38,7 +45,8 @@ main {
 }
 
 img {
-    width: 90%;
+    max-width: 100%;
+    max-height: 100%;
     border-radius: 20px;
     border: 4px solid blue;
     box-shadow:5px 0 5px 5px #033483;
