--- a/design-principles/css/small.css
+++ b/design-principles/css/small.css
@@ -57,7 +57,8 @@ img {
     border: 1px solid grey;
     border-radius: 20px;
     padding: 1rem;
-    width: 280px
+    min-width: 200px;
+    max-width: 370px;
 }
 
 .example p {
