--- a/Lesson2/site-plan.css
+++ b/Lesson2/site-plan.css
@@ -191,7 +191,7 @@ colored {
 
 }
 
-@media only screen and (min-width: 60em) {
+@media only screen and (min-width: 920px) {
     #color-scheme main, #audience main, #typo main{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
