--- a/Lesson2/site-plan.css
+++ b/Lesson2/site-plan.css
@@ -15,7 +15,7 @@ html {
 body {
     margin: 0 auto;
     background-color: var(--accent1-color);
-    max-width: 80%;
+    max-width: 968px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 main{
@@ -177,7 +177,7 @@ colored {
   color: var(--paragraph-color-on-color);
 }
 
-@media only screen and (min-width: 35em) {
+@media only screen and (max-width: 780px) {
 
     #color-scheme main, #audience main, #typo main {
         display: grid;
@@ -191,7 +191,7 @@ colored {
 
 }
 
-@media only screen and (min-width: 920px) {
+@media only screen and (max-width: 950px) {
     #color-scheme main, #audience main, #typo main{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
