--- a/Lesson2/site-plan.css
+++ b/Lesson2/site-plan.css
@@ -141,6 +141,10 @@ nav a:hover, footer a:hover {
     height: 40px;
     text-align: left;
 }
+#audience table img {
+    width: 13rem;
+	height: 16rem;
+}
 /* Typography*/
 #typo main {
     display: block;
@@ -177,7 +181,7 @@ colored {
   color: var(--paragraph-color-on-color);
 }
 
-@media only screen and (max-width: 780px) {
+@media only screen and (min-width: 780px) {
 
     #color-scheme main, #audience main, #typo main {
         display: grid;
@@ -191,7 +195,7 @@ colored {
 
 }
 
-@media only screen and (max-width: 950px) {
+@media only screen and (min-width: 950px) {
     #color-scheme main, #audience main, #typo main{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
